Fix side alignment

--- a/src/static/css/app.css
+++ b/src/static/css/app.css
@@ -63,4 +63,20 @@ body {
     .Grid {
         padding: 0;
     }
+
+    .Grid-cell {
+        padding: 0;
+
+        @media(--md-viewport) {
+            &:nth-child(odd) {
+                padding-right: 2rem;
+            }
+        }
+
+        @media(--lg-viewport) {
+            &:nth-child(odd) {
+                padding-right: 2rem;
+            }
+        }
+    }
 }
