--- a/src/static/css/components/Event.css
+++ b/src/static/css/components/Event.css
@@ -44,6 +44,10 @@
         g {
             fill: var(--primary-color);
         }
+
+        @media(--sm-only-viewport) {
+            padding-left: 2rem;
+        }
     }
 }
 
